<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_above="@id/email_edit_text"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_marginTop="16dp" />


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Login"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_below="@id/email_edit_text"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:layout_below="@id/password_edit_text"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/text_sad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have one? Sad to be you"
        android:gravity="center_horizontal"
        android:layout_below="@id/login_button"
        android:layout_marginTop="200dp"/>

</RelativeLayout>
